# routine-timer

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.superpowers/sdd/: redesign-A-report.md
docs/: ios-run.md
docs/superpowers/plans/: 2026-07-01-daily-routine-timer.md  2026-07-08-ios-ipados-port.md
docs/superpowers/specs/: 2026-07-01-daily-routine-timer-design.md  2026-07-01-design-application.md  2026-07-08-ios-ipados-port-design.md
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  mobile.rs  state.rs
src-tauri/src/core/: clock.rs  mod.rs  model.rs  stats.rs  timer.rs
src-tauri/src/db/: mod.rs  routines.rs  sessions.rs  settings.rs
src/lib/: commands.ts  routines.svelte.ts  routines.test.ts  theme.svelte.ts  theme.test.ts  time.test.ts  time.ts  timer.svelte.ts  timer.test.ts  types.ts
src/lib/components/: FocusView.svelte  NewRoutineModal.svelte  NewRoutineModal.test.ts  RingTimer.svelte  RingTimer.test.ts  RoutineCard.svelte  RoutineCard.test.ts  RoutineRow.svelte
src/routes/: Focus.svelte  Focus.test.ts  Home.svelte  Home.test.ts  Popover.svelte  Popover.test.ts  Report.svelte  Report.test.ts  Settings.svelte  Settings.test.ts
src/test/: tauri-mock.ts
static/icns/: RoutineTimer-Dark.icns  RoutineTimer-Light.icns
