[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.4", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-notification = "2.3.3"
rusqlite = { version = "0.40.1", features = ["bundled"] }
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
time = "0.3"

# `cfg(desktop)` is a Tauri-only rustc-cfg alias set by tauri-build's own build
# script (visible to `#[cfg(desktop)]` in source), NOT a real rustc/Cargo target
# key — Cargo's `[target.'cfg(...)']` predicates only understand actual target
# keys (target_os, target_family, ...), so `cfg(desktop)` here would silently
# never match and drop this dependency on every platform, including macOS.
# tauri-build defines desktop == target_os is neither ios nor android, so we
# spell that out explicitly (matches every official tauri-plugin-* Cargo.toml).
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
tauri-plugin-positioner = { version = "2.3.2", features = ["tray-icon"] }
